--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="form__group form__group_end">
-                    <button type="submit" class="question__btn question__btn_back2">Назад</button>
+                    <button type="submit" class="question__btn question__btn_back question__btn_back2">Назад</button>
                     <button type="submit" class="question__btn question__btn_2">Продолжить</button>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="form__group form__group_end">
-                    <button type="submit" class="question__btn question__btn_back3">Назад</button>
+                    <button type="submit" class="question__btn question__btn_back question__btn_back3">Назад</button>
                     <button type="submit" class="question__btn question__btn_3">Продолжить</button>
                 </div>
             </div>
@@ -135,7 +135,7 @@
                     </div>
                 </div>
                 <div class="form__group form__group_end">
-                    <button type="submit" class="question__btn question__btn_back4">Назад</button>
+                    <button type="submit" class="question__btn question__btn_back question__btn_back4">Назад</button>
                     <button type="submit" class="question__btn question__btn_4">Продолжить</button>
                 </div>
             </div>
@@ -177,7 +177,7 @@
                     </div>
                 </div>
                 <div class="form__group form__group_end">
-                    <button type="submit" class="question__btn question__btn_back5">Назад</button>
+                    <button type="submit" class="question__btn question__btn_back question__btn_back5">Назад</button>
                     <button type="submit" class="question__btn question__btn_5">Продолжить</button>
                 </div>
             </div>
@@ -231,7 +231,7 @@
                     </div>
                 </div>
                 <div class="form__group form__group_end">
-                    <button type="submit" class="question__btn question__btn_back6">Назад</button>
+                    <button type="submit" class="question__btn question__btn_back question__btn_back6">Назад</button>
                     <button type="submit" class="question__btn question__btn_6">Продолжить</button>
                 </div>
             </div>
@@ -269,7 +269,7 @@
                     </div>
                 </div>
                 <div class="form__group form__group_end">
-                    <button type="submit" class="question__btn question__btn_back7">Назад</button>
+                    <button type="submit" class="question__btn question__btn_back question__btn_back7">Назад</button>
                     <button type="submit" class="question__btn question__btn_7">Продолжить</button>
                 </div>
             </div>
@@ -306,7 +306,7 @@
                     </div>
                 </div>
                 <div class="form__group form__group_end">
-                    <button type="submit" class="question__btn question__btn_back8">Назад</button>
+                    <button type="submit" class="question__btn question__btn_back question__btn_back8">Назад</button>
                     <button type="submit" class="question__btn question__btn_8">Продолжить</button>
                 </div>
             </div>
@@ -340,7 +340,7 @@
                         <div class="form__group__error error" id="status__error"></div>
                     </div>
                     <div class="form__group form__group_end">
-                        <button type="submit" class="question__btn question__btn_back9">Назад</button>
+                        <button type="submit" class="question__btn question__btn_back question__btn_back9">Назад</button>
                         <button type="submit" id="ajax_send" class="question__btn question__btn_9">Продолжить</button>
                     </div>
                 </form>
